# opencode-setup

./: LICENSE  README.md  install.sh  package.json
.github/workflows/: publish.yml
command/: setup.md
commands/: setup.md
mcp-server/: pyproject.toml
mcp-server/opencode_setup/: __init__.py  server.py
plugin/: index.js  package.json
skills/opencode-automation-recommender/: SKILL.md
skills/opencode-automation-recommender/references/: commands.md  mcp-servers.md  plugins-hooks.md  skills-reference.md  subagents.md
